[package]
name = "merkle"
version = "0.1.0"
authors = ["cezhang52111 <zhangce52111@ruc.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.1"
byteorder = "1.3"
chrono = "0.4.6"
crossbeam = "0.7.3"
enum-primitive-derive = "0.1"
exonum-crypto = { version = "0.13.0-rc.2", features = ["with-serde"] }
exonum-proto = { version = "0.13.0-rc.2", optional = true }
failure = "0.1"
hex = "0.4"
leb128 = "0.2"
num-traits = "0.2"
rocksdb = { version = "0.13", default-features = false }
rust_decimal = "1.0, <1.1.0" # The 1.1.0 version requires Rust 1.39+
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
smallvec = "1.0"
tempfile = "3.0"
uuid = { version="0.8", features = ["v4"] }
rand = "0.7"
protobuf = { version = "2.8.1", features = ["with-serde"], optional = true }

[dev-dependencies]
assert_matches = "1.3.0"
criterion = "0.3"
exonum-derive = { version = "0.13.0-rc.2" }
rand = "0.7"
rand_xorshift = "0.2.0"
proptest = "0.9"
modifier = "0.1"
pretty_assertions = "0.6"
url = "2.0.0"

[features]
default = ["rocksdb_snappy", "with-protobuf"]
long_benchmarks = []
with-protobuf = ["with-serde", "protobuf", "exonum-proto"]
with-serde = []
rocksdb_snappy = ["rocksdb/snappy"]
rocksdb_lz4 = ["rocksdb/lz4"]
rocksdb_zlib = ["rocksdb/zlib"]
rocksdb_zstd = ["rocksdb/zstd"]
rocksdb_bzip2 = ["rocksdb/bzip2"]

[build-dependencies]
exonum-build = { version = "0.13.0-rc.2" }